// ============================================================================
// Persistence Platform - Main Application
// ============================================================================
//
// @file PersistencePlatformApplication.kt
// @version 1.0.0
// @author Unhinged Team
// @date 2025-10-19
// @description Main application entry point for the Persistence Platform
//
// This is the main application that starts the persistence platform,
// initializes all database providers, and starts the unified API server.
// It handles configuration loading, dependency injection, and graceful shutdown.
//
// ============================================================================

package com.unhinged.persistence

import com.unhinged.persistence.api.PersistenceApiServer
import com.unhinged.persistence.config.PersistenceConfiguration
import com.unhinged.persistence.config.ConfigurationLoader
import com.unhinged.persistence.impl.PersistenceManagerImpl
import kotlinx.coroutines.runBlocking
import org.slf4j.LoggerFactory
import kotlin.system.exitProcess

/*
 * @llm-type misc.application
 * @llm-does main application entry point for the persistence
 */
class PersistencePlatformApplication {
    
    private val logger = LoggerFactory.getLogger(PersistencePlatformApplication::class.java)
    
    private lateinit var persistenceManager: PersistenceManagerImpl
    private lateinit var apiServer: PersistenceApiServer
    private lateinit var configuration: PersistenceConfiguration
    
    /**
     * Start the Persistence Platform
     */
    suspend fun start(configPath: String = "config/persistence-platform.yaml") {
        logger.info("üöÄ Starting Unhinged Persistence Platform...")
        
        try {
            // Load configuration
            loadConfiguration(configPath)
            
            // Initialize persistence manager
            initializePersistenceManager()
            
            // Start API server
            startApiServer()
            
            // Register shutdown hook
            registerShutdownHook()
            
            logger.info("‚úÖ Unhinged Persistence Platform started successfully!")
            logger.info("üåê REST API available at: http://localhost:${configuration.api.protocols.rest.port}/api/v1")
            logger.info("üîß Health check: http://localhost:${configuration.api.protocols.rest.port}/api/v1/health")
            logger.info("üìä Metrics: http://localhost:${configuration.api.protocols.rest.port}/api/v1/metrics")
            
        } catch (e: Exception) {
            logger.error("‚ùå Failed to start Persistence Platform", e)
            throw e
        }
    }
    
    /**
     * Stop the Persistence Platform
     */
    suspend fun stop() {
        logger.info("üõë Stopping Unhinged Persistence Platform...")
        
        try {
            // Stop API server
            if (::apiServer.isInitialized) {
                apiServer.stop()
            }
            
            // Shutdown persistence manager
            if (::persistenceManager.isInitialized) {
                persistenceManager.shutdown()
            }
            
            logger.info("‚úÖ Unhinged Persistence Platform stopped successfully")
            
        } catch (e: Exception) {
            logger.error("‚ùå Error during Persistence Platform shutdown", e)
            throw e
        }
    }
    
    // ==========================================================================
    // Initialization Methods
    // ==========================================================================
    
    private suspend fun loadConfiguration(configPath: String) {
        logger.info("üìã Loading configuration from: $configPath")
        
        try {
            configuration = ConfigurationLoader.loadConfiguration(configPath)
            
            logger.info("‚úÖ Configuration loaded successfully")
            logger.info("üìä Platform version: ${configuration.version}")
            logger.info("üóÑÔ∏è Technologies: ${configuration.technologies.keys.joinToString(", ")}")
            logger.info("üíæ Databases: ${configuration.databases.keys.joinToString(", ")}")
            logger.info("üìã Tables: ${configuration.tables.keys.joinToString(", ")}")
            
        } catch (e: Exception) {
            logger.error("‚ùå Failed to load configuration", e)
            throw e
        }
    }
    
    private suspend fun initializePersistenceManager() {
        logger.info("üîß Initializing Persistence Manager...")
        
        try {
            persistenceManager = PersistenceManagerImpl()
            persistenceManager.initialize(configuration)
            
            logger.info("‚úÖ Persistence Manager initialized successfully")
            
        } catch (e: Exception) {
            logger.error("‚ùå Failed to initialize Persistence Manager", e)
            throw e
        }
    }
    
    private suspend fun startApiServer() {
        logger.info("üåê Starting API Server...")
        
        try {
            apiServer = PersistenceApiServer(persistenceManager, configuration)
            apiServer.start()
            
            logger.info("‚úÖ API Server started successfully")
            
        } catch (e: Exception) {
            logger.error("‚ùå Failed to start API Server", e)
            throw e
        }
    }
    
    private fun registerShutdownHook() {
        Runtime.getRuntime().addShutdownHook(Thread {
            logger.info("üîÑ Shutdown hook triggered")
            runBlocking {
                try {
                    stop()
                } catch (e: Exception) {
                    logger.error("Error during shutdown", e)
                }
            }
        })
    }
    
    // ==========================================================================
    // Health and Status Methods
    // ==========================================================================
    
    /**
     * Get platform health status
     */
    suspend fun getHealthStatus(): Map<String, Any> {
        return if (::persistenceManager.isInitialized) {
            val healthStatus = persistenceManager.getHealthStatus()
            mapOf(
                "platform_status" to "healthy",
                "version" to configuration.version,
                "uptime" to System.currentTimeMillis(),
                "technologies" to healthStatus
            )
        } else {
            mapOf(
                "platform_status" to "initializing",
                "message" to "Platform is still initializing"
            )
        }
    }
    
    /**
     * Get platform metrics
     */
    suspend fun getMetrics(): Map<String, Any> {
        return if (::persistenceManager.isInitialized) {
            val metrics = persistenceManager.getMetrics()
            mapOf(
                "platform_metrics" to metrics,
                "timestamp" to System.currentTimeMillis()
            )
        } else {
            mapOf(
                "message" to "Metrics not available - platform not initialized"
            )
        }
    }
    
    /**
     * Get platform configuration summary
     */
    fun getConfigurationSummary(): Map<String, Any> {
        return if (::configuration.isInitialized) {
            mapOf(
                "version" to configuration.version,
                "technologies" to configuration.technologies.keys.toList(),
                "databases" to configuration.databases.keys.toList(),
                "tables" to configuration.tables.keys.toList(),
                "queries" to configuration.queries.keys.toList(),
                "operations" to configuration.operations.keys.toList(),
                "api_endpoints" to configuration.api.endpoints.keys.toList()
            )
        } else {
            mapOf(
                "message" to "Configuration not loaded"
            )
        }
    }
}

/**
 * Configuration loader utility
 */
object ConfigurationLoader {
    private val logger = LoggerFactory.getLogger(ConfigurationLoader::class.java)
    
    suspend fun loadConfiguration(configPath: String): PersistenceConfiguration {
        logger.info("üìã Loading configuration from: $configPath")
        
        try {
            // For now, return a minimal configuration
            // In a real implementation, this would parse the YAML file
            return createDefaultConfiguration()
            
        } catch (e: Exception) {
            logger.error("‚ùå Failed to load configuration from: $configPath", e)
            throw e
        }
    }
    
    private fun createDefaultConfiguration(): PersistenceConfiguration {
        // Create a minimal default configuration for testing
        return PersistenceConfiguration(
            version = "2.1.0",
            technologies = mapOf(
                "redis" to com.unhinged.persistence.config.TechnologyConfiguration(
                    type = com.unhinged.persistence.core.TechnologyType.CACHE,
                    clusters = listOf("redis-cache"),
                    useCases = listOf("caching", "sessions"),
                    connectionConfig = com.unhinged.persistence.config.ConnectionConfiguration(
                        hosts = listOf("localhost"),
                        port = 6379,
                        connectionPool = com.unhinged.persistence.config.ConnectionPoolConfiguration()
                    ),
                    performanceConfig = com.unhinged.persistence.config.PerformanceConfiguration(),
                    securityConfig = null
                ),
                "cockroachdb" to com.unhinged.persistence.config.TechnologyConfiguration(
                    type = com.unhinged.persistence.core.TechnologyType.NEWSQL,
                    clusters = listOf("crdb-primary"),
                    useCases = listOf("transactional", "relational"),
                    connectionConfig = com.unhinged.persistence.config.ConnectionConfiguration(
                        hosts = listOf("localhost"),
                        port = 26257,
                        database = "defaultdb",
                        username = "root",
                        connectionPool = com.unhinged.persistence.config.ConnectionPoolConfiguration()
                    ),
                    performanceConfig = com.unhinged.persistence.config.PerformanceConfiguration(),
                    securityConfig = null
                )
            ),
            databases = mapOf(
                "user_data" to com.unhinged.persistence.config.DatabaseConfiguration(
                    primaryTechnology = "cockroachdb",
                    useCase = "user_profiles"
                ),
                "session_store" to com.unhinged.persistence.config.DatabaseConfiguration(
                    primaryTechnology = "redis",
                    useCase = "user_sessions"
                )
            ),
            tables = mapOf(
                "users" to com.unhinged.persistence.config.TableConfiguration(
                    database = "user_data",
                    technology = "cockroachdb",
                    schema = mapOf(
                        "id" to com.unhinged.persistence.config.FieldConfiguration(
                            type = "uuid",
                            primaryKey = true
                        ),
                        "email" to com.unhinged.persistence.config.FieldConfiguration(
                            type = "string",
                            unique = true,
                            indexed = true
                        )
                    ),
                    accessPatterns = listOf(
                        com.unhinged.persistence.config.AccessPattern(
                            type = "point_lookup",
                            fields = listOf("id")
                        )
                    )
                ),
                "user_sessions" to com.unhinged.persistence.config.TableConfiguration(
                    database = "session_store",
                    technology = "redis",
                    schema = mapOf(
                        "session_id" to com.unhinged.persistence.config.FieldConfiguration(
                            type = "string",
                            primaryKey = true
                        ),
                        "user_id" to com.unhinged.persistence.config.FieldConfiguration(
                            type = "uuid",
                            indexed = true
                        )
                    ),
                    accessPatterns = listOf(
                        com.unhinged.persistence.config.AccessPattern(
                            type = "point_lookup",
                            fields = listOf("session_id")
                        )
                    )
                )
            ),
            queries = mapOf(
                "get_user_by_id" to com.unhinged.persistence.config.QueryConfiguration(
                    table = "users",
                    type = "point_lookup",
                    parameters = listOf("user_id"),
                    cacheStrategy = "redis_aside"
                ),
                "get_user_session" to com.unhinged.persistence.config.QueryConfiguration(
                    table = "user_sessions",
                    type = "point_lookup",
                    parameters = listOf("session_id")
                )
            ),
            operations = mapOf(
                "create_user_complete" to com.unhinged.persistence.config.OperationConfiguration(
                    type = "distributed_transaction",
                    steps = listOf(
                        com.unhinged.persistence.config.OperationStepConfiguration(
                            table = "users",
                            operation = "insert",
                            technology = "cockroachdb"
                        ),
                        com.unhinged.persistence.config.OperationStepConfiguration(
                            table = "user_sessions",
                            operation = "insert",
                            technology = "redis"
                        )
                    )
                )
            ),
            routing = mapOf(
                "hot_data" to com.unhinged.persistence.config.RoutingConfiguration(
                    criteria = "accessed_within_24h",
                    technologies = listOf("redis", "cockroachdb"),
                    priority = "high"
                )
            ),
            sharding = com.unhinged.persistence.config.ShardingConfiguration(
                strategies = mapOf(
                    "user_based" to com.unhinged.persistence.config.ShardingStrategy(
                        shardKey = "user_id",
                        shardCount = 64
                    )
                )
            ),
            lifecycle = com.unhinged.persistence.config.LifecycleConfiguration(
                policies = mapOf(
                    "user_data_retention" to com.unhinged.persistence.config.LifecyclePolicy(
                        appliesTo = listOf("users"),
                        rules = listOf(
                            com.unhinged.persistence.config.LifecycleRule(
                                age = "7_years",
                                action = "archive"
                            )
                        )
                    )
                ),
                automation = com.unhinged.persistence.config.LifecycleAutomation(
                    schedule = "daily_at_02:00_utc"
                )
            ),
            api = com.unhinged.persistence.config.ApiConfiguration(
                endpoints = mapOf(
                    "/api/v1/users" to com.unhinged.persistence.config.EndpointConfiguration(
                        operations = listOf("create_user_complete", "get_user_by_id"),
                        rateLimit = "1000/hour",
                        authentication = "required"
                    )
                ),
                protocols = com.unhinged.persistence.config.ProtocolConfiguration(
                    rest = com.unhinged.persistence.config.RestConfiguration(
                        enabled = true,
                        port = 8090
                    ),
                    grpc = com.unhinged.persistence.config.GrpcConfiguration(
                        enabled = true,
                        port = 9090
                    )
                ),
                security = com.unhinged.persistence.config.ApiSecurityConfiguration(
                    authentication = com.unhinged.persistence.config.AuthenticationConfiguration(
                        type = "jwt"
                    ),
                    rateLimiting = com.unhinged.persistence.config.RateLimitingConfiguration(
                        enabled = true
                    ),
                    cors = com.unhinged.persistence.config.CorsConfiguration(
                        enabled = true,
                        allowedOrigins = listOf("http://localhost:3000")
                    )
                )
            ),
            aiMlIntegration = com.unhinged.persistence.config.AiMlConfiguration(
                embeddingModels = mapOf(
                    "text_embeddings" to com.unhinged.persistence.config.EmbeddingModelConfiguration(
                        model = "sentence-transformers/all-MiniLM-L6-v2",
                        dimensions = 384,
                        useCases = listOf("general_text", "search")
                    )
                ),
                vectorOperations = com.unhinged.persistence.config.VectorOperationsConfiguration(),
                modelServing = com.unhinged.persistence.config.ModelServingConfiguration(
                    embeddingService = com.unhinged.persistence.config.ServiceConfiguration(
                        endpoint = "http://embedding-service:8080"
                    ),
                    recommendationService = com.unhinged.persistence.config.ServiceConfiguration(
                        endpoint = "http://recommendation-service:8080"
                    )
                )
            ),
            monitoring = com.unhinged.persistence.config.MonitoringConfiguration(
                metrics = listOf("query_latency_p99", "throughput_per_technology"),
                technologySpecificMetrics = mapOf(
                    "redis" to listOf("memory_usage", "hit_ratio"),
                    "cockroachdb" to listOf("transaction_latency", "replication_lag")
                ),
                alerts = listOf(
                    com.unhinged.persistence.config.AlertConfiguration(
                        condition = "query_latency_p99 > 1000ms",
                        severity = "warning"
                    )
                ),
                dashboards = listOf("persistence_platform_overview"),
                logging = com.unhinged.persistence.config.LoggingConfiguration(),
                tracing = com.unhinged.persistence.config.TracingConfiguration(),
                healthChecks = com.unhinged.persistence.config.HealthCheckConfiguration()
            ),
            environments = mapOf(
                "development" to com.unhinged.persistence.config.EnvironmentConfiguration(
                    technologies = mapOf(
                        "redis" to com.unhinged.persistence.config.EnvironmentTechnologyConfiguration(
                            replicas = 1,
                            memory = "512MB"
                        ),
                        "cockroachdb" to com.unhinged.persistence.config.EnvironmentTechnologyConfiguration(
                            replicas = 1,
                            memory = "1GB"
                        )
                    )
                )
            )
        )
    }
}

/**
 * Main function - Application entry point
 */
fun main(args: Array<String>) {
    val logger = LoggerFactory.getLogger("PersistencePlatformMain")
    
    try {
        val configPath = args.getOrNull(0) ?: "config/persistence-platform.yaml"
        
        logger.info("üöÄ Starting Unhinged Persistence Platform...")
        logger.info("üìã Configuration path: $configPath")
        
        val application = PersistencePlatformApplication()
        
        runBlocking {
            application.start(configPath)
            
            // Keep the application running
            logger.info("‚úÖ Platform is running. Press Ctrl+C to stop.")
            
            // Wait indefinitely (until shutdown hook is triggered)
            while (true) {
                kotlinx.coroutines.delay(1000)
            }
        }
        
    } catch (e: Exception) {
        logger.error("‚ùå Failed to start Persistence Platform", e)
        exitProcess(1)
    }
}
